--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.10",
+    "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
