--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.11",
     "firebase": "^10.11.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
