--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.0.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.10",
     "socket.io-client": "^4.7.5",
+    "tinymce": "^7.1.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
