--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.11.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
